# AOC2023

./: .gitignore
haskell/: AOC2023.cabal  haskell.cabal  package.yaml  run
haskell/app/: Main.hs
haskell/src/: AOCHelper.hs  Algorithms.hs  BSArray.hs  Day01.hs  Day01b.hs  Day01c.hs  Day02.hs  Day03.hs  Day05.hs  Day06.hs  Day08.hs  Day10.hs  Day14.hs  Day17.hs  Day19.hs  Day23.hs  Dayx.hs  PosDir.hs
haskell/test/: BSArraySpec.hs
python/: day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  run.py  util.py
rust/: Cargo.toml  dayXX.rs  timing
rust/src/: day01.rs  day01b.rs  day02.rs  day03.rs  day04.rs  day05.rs  day05b.rs  day05c.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  linalg.rs  main.rs  util.rs
