[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.0"
itertools = "0.12.0"
priority-queue = "1.3.0"
queues = "1.0.2"
fraction = "0.14.0"
num-traits = "0.2.17"
num = "0.4.1"
ansi_term = "0.12.0"
num-bigint = "0.4.4"
rustc-hash = "1.1.0"